--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
-  "name": "GWF5 Open Times",
-  "homepage": "https://github.com/gizmore/gwf5-opentimes",
+  "name": "gdo6-opentimes",
+  "homepage": "https://github.com/gizmore/gdo6-opentimes",
   "authors": [
     "gizmore <gizmore@wechall.net>"
   ],
-  "description": "OpenTimes module for gwf5",
+  "description": "OpenTimes module for gdo6",
   "main": "Module_OpenTimes.php",
   "keywords": [
-    "gwf5",
+    "gdo6",
     "opentimes"
   ],
   "license": "MIT",
